# chunk-search-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build-and-publish.yml  rust.yml
src/: main.rs
src/protos/: mod.rs
