[package]
name = "chunk-search-rs"
version = "0.1.0"
authors = ["GiganticMinecraft"]
edition = "2018"

[dependencies]
anvil-region = { git = "https://github.com/GiganticMinecraft/anvil-region", rev = "e3d62f53"}
named-binary-tag = "0.2"

# concurrent processing

crossbeam = "0.7.3"
crossbeam-channel = "0.4.2"
