[package]
name = "chunk-search-rs"
version = "0.1.0"
authors = ["GiganticMinecraft"]
description = "Command line tool to traverse MineCraft regions and list chunks containing entities or tile-entities"
edition = "2018"

[build-dependencies]
protobuf = "2.15.1"
protobuf-codegen-pure = "2.15.1"

[dependencies]
anvil-region = { git = "https://github.com/GiganticMinecraft/anvil-region", rev = "e3d62f53"}
named-binary-tag = "0.2"

clap = "2.33.0"

# concurrent processing

crossbeam = "0.7.3"
crossbeam-channel = "0.4.2"
